--- a/static-tensor.cabal
+++ b/static-tensor.cabal
@@ -8,6 +8,8 @@ license:             BSD3
 license-file:        LICENSE
 author:              Alexey Vagarenko
 maintainer:          vagarenko@gmail.com
+bug-reports:         https://github.com/vagarenko/static-tensor/issues
+homepage:            https://github.com/vagarenko/static-tensor
 copyright:           Copyright (C) 2017 Alexey Vagarenko
 category:            Data
 build-type:          Simple
@@ -22,6 +24,10 @@ extra-source-files:
 
 cabal-version:       >= 1.10
 tested-with:         GHC == 8.2.1
+
+source-repository head
+        type:     git
+        location: https://github.com/vagarenko/static-tensor.git
 
 library
     exposed-modules:
