--- a/static-tensor.cabal
+++ b/static-tensor.cabal
@@ -45,12 +45,12 @@ library
     -- other-extensions:    
     build-depends:
           base               >= 4.10 && <= 5.0
-        , deepseq            == 1.4.3.*
-        , lens               == 4.15.*
-        , mono-traversable   == 1.0.*
-        , singletons         == 2.3.*
-        , split              == 0.2.*
-        , template-haskell   == 2.12.*
+        , deepseq            >= 1.4.3
+        , lens               >= 4.15
+        , mono-traversable   >= 1.0
+        , singletons         >= 2.5.1
+        , split              >= 0.2
+        , template-haskell   >= 2.14
     hs-source-dirs:      src
     default-language:    Haskell2010
     ghc-options:        -Wall -O2 -funbox-strict-fields
