--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
 packages:
-- location: .
+- .
 flags: {}
 extra-package-dbs: []
-resolver: nightly-2018-12-17 # Last GHC 8.6.2
+resolver: lts-13.11 # LTS GHC 8.6.3
 allow-newer: true
 extra-deps: []
