--- a/static-tensor.cabal
+++ b/static-tensor.cabal
@@ -48,9 +48,9 @@ library
         , deepseq            >= 1.4.3
         , lens               >= 4.15
         , mono-traversable   >= 1.0
-        , singletons         >= 2.5.1
+        , singletons         >= 2.3.1
         , split              >= 0.2
-        , template-haskell   >= 2.14
+        , template-haskell   >= 2.12
     hs-source-dirs:      src
     default-language:    Haskell2010
     ghc-options:        -Wall -O2 -funbox-strict-fields
@@ -70,12 +70,12 @@ benchmark matMul
         , MatMul.Tensor
     build-depends:
           base               >= 4.10 && <= 5.0
-        , criterion          == 1.2.*
-        , deepseq            == 1.4.3.*
-        , linear             == 1.20.*
-        , mwc-random         == 0.13.*
+        , criterion          >= 1.2
+        , deepseq            >= 1.4.3
+        , linear             >= 1.20
+        , mwc-random         >= 0.13
         , static-tensor
-        , vector             == 0.12.*
+        , vector             >= 0.12
 
 test-suite coreDump
   type:               exitcode-stdio-1.0
