Add golden files

--- a/static-tensor.cabal
+++ b/static-tensor.cabal
@@ -21,9 +21,9 @@ extra-source-files:
         , tests/CoreDump/Tensor/*.hs
         , tests/CoreDump/Vector/*.hs
         , tests/CoreDump/Matrix/*.hs
-        , tests/CoreDump/Tensor/*.dump-simpl.*.golden
-        , tests/CoreDump/Vector/*.dump-simpl.*.golden
-        , tests/CoreDump/Matrix/*.dump-simpl.*.golden
+        , tests/CoreDump/Tensor/*.golden
+        , tests/CoreDump/Vector/*.golden
+        , tests/CoreDump/Matrix/*.golden
 
 cabal-version:       >= 1.10
 tested-with:         GHC >= 8.2.1 && <= 8.2.2
